--- a/Concurrency2/Makefile
+++ b/Concurrency2/Makefile
@@ -1,2 +1,4 @@
 diningPhilosphers: diningPhilosophers.cpp
 	g++ -g -o diningPhilosophers diningPhilosophers.cpp -pthread
+clean:
+	rm diningPhilosophers
