Introducing test README and draft of first test

--- a/Concurrency3/Makefile
+++ b/Concurrency3/Makefile
@@ -1,4 +1,8 @@
 concurrency3: concurrency3.cpp
 	g++ -g -o concurrency3 concurrency3.cpp -pthread
+	
+test: concurrency3.cpp
+	g++ -g -o test concurrency3.cpp -pthread
+
 clean:
 	rm concurrency3
